style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Roboto", sans-serif;
}

html{
    scroll-behavior: smooth;
}

#home{
    height: 80vh;
    background-color: #1f2937;
}

nav{
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 11vh;
    padding: 0 15px;
    background-color: #1f2937;
    position: fixed;
}

.logo{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 14vw;
}

.logo img{
    height: 70px;
    width: 70px;
}

.logo h1{
    color: #f9faf8;
    font-size: 24px;
}

nav ul{
    display: flex;
    justify-content: space-evenly;
    width: 15rem;
    list-style: none;
}

nav ul a{
    color: #e5e7eb;
    font-size: 18px;
    text-decoration: none;
}

nav ul a:hover{
    text-decoration: solid;
    text-decoration-color: #3882f6;
    text-decoration-line: underline;
    text-decoration-thickness: 2px;
    text-underline-offset: 5px;
}

.homeContent{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    gap: 1rem;
}

.left, .right{
    width: 40%;
}

.left h1{
    display: flex;
    justify-content: left;
    align-items: flex-start;
    flex-direction: column;
    color: #f9faf8;
    font-size: 3rem;
}

.left p{
    color: #e5e7eb;
    font-size: 18px;
    width: 90%;
    padding-bottom: 10px;
}

.left button{
    border-style: none;
    background-color: #3882f6;
    height: 35px;
    width: 120px;
    color: #e5e7eb;
    font-weight: bold;
    font-size: 1.1rem;
    border-radius: 8px;
}

.left button:hover{
    background-color: #1f2937;
    outline: 2px solid #3882f6;
}

.right img{
    height: 280px;
    width: 500px;
    border-radius: 10px;
}

.right p{
    text-align: center;
    color: #e5e7eb;
    opacity: .5;
    font-size: 14px;
}


/* ABOUT */
#about{
    height: 80vh;
    display: flex;
    /* justify-content: center; */
    align-items: center;
    flex-direction: column;
    padding-top: 4rem;
}

#about h1{
    color: #1f2937;
    font-size: 2.2rem;
    margin-bottom: 2.5rem;
    font-weight: 800;
}

.infoCards{
    display: flex;
    justify-self: center;
    align-items: center;
    gap: 2.5rem;
}

.infoCards div{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 10px;
    text-align: center;
}

.infoCards div img{
    height: 200px;
    width: 200px;
    border-radius: 15px;
    /* border: 4px solid #3882f6; */
}

.infoCards div p{
    /* color: ;check others */
    font-size: 18px;
    width: 160px;
}


/* QUOTES */
#quotation{
    height: 55vh;
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
}

#quotation div{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    width: 60%;
}

.quotes q{
    color: #1f2937;
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
}

.quotes p{
    color: #1f2937;
    font-size: 28px;
    font-weight: bold;
    align-self: flex-end;
}


/* CTA */
#cta{
    height: 40vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.blueBg{
    height: 50%;
    width: 70%;
    color: #e5e7eb;
    background-color: #3882f6;
    border-radius: 10px;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.ctaLeft h2{
    color: #f9faf8;
}

.ctaRight button{
    border-style: none;
    background-color: #3882f6;
    height: 35px;
    width: 120px;
    color: #e5e7eb;
    font-weight: bold;
    font-size: 1.1rem;
    border-radius: 8px;
    outline: 2px solid #f9faf8;
}

.ctaRight button:hover{
    background-color: #1f2937;
    color: #e5e7eb;
    outline: 0px;
}


/* FOOTER */
.footer{
    height: 15vh;
    width: 100vw;
    background-color: #1f2937;
    display: flex;
    justify-content: center;
    align-items: center;
    color: #e5e7eb;
    font-size: 18px;
}

